--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Melos Simeneh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.4.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
