--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=developmnet
 PORT=8000
-MONGO_DATABASE=mongodb://localhost:27017/tours_db
+MONGO_DATABASE=mongodb://127.0.0.1:27017/tours_db
