--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
