--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "prod":"set NODE_ENV=production && nodemon server.js"
   },
   "author": "Melos Simeneh",
   "license": "ISC",
