--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "prod":"set NODE_ENV=production && nodemon server.js"
+    "prod": "set NODE_ENV=production && nodemon server.js"
   },
   "author": "Melos Simeneh",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
