--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=8000
 MONGO_DATABASE=mongodb://127.0.0.1:27017/tours_db
+JWT_SECRET=gsdfjnjje523kmgadgafgsfhladfga3423452345l
