--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 NODE_ENV=development
 PORT=8000
 MONGO_DATABASE=mongodb://127.0.0.1:27017/tours_db
+
 JWT_SECRET=gsdfjnjje523kmgadgafgsfhladfga3423452345l
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=melos.simeneh2@gmail.com
+EMAIL_PASSWORD=password
