email data update

--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ MONGO_DATABASE=mongodb://127.0.0.1:27017/tours_db
 JWT_SECRET=gsdfjnjje523kmgadgafgsfhladfga3423452345l
 JWT_EXPIRES_IN=90d
 
-EMAIL_USERNAME=melos.simeneh2@gmail.com
-EMAIL_PASSWORD=password
+EMAIL_USERNAME=a124458539192a
+EMAIL_PASSWORD=1e3caf48074eba
+EMAIL_HOST=smtp.mailtrap.io
