email data update

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ MONGO_DATABASE=mongodb://127.0.0.1:27017/tours_db
 JWT_SECRET=gsdfjnjje523kmgadgafgsfhladfga3423452345l
 JWT_EXPIRES_IN=90d
 
-EMAIL_USERNAME=a124458539192a
-EMAIL_PASSWORD=1e3caf48074eba
-EMAIL_HOST=smtp.mailtrap.io
+EMAIL_USERNAME=0c225236f43aa6
+EMAIL_PASSWORD=7a8b09022a1e91
+EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=25
